--- a/menu-title-tuintra.html
+++ b/menu-title-tuintra.html
@@ -1,7 +1,7 @@
 <link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="../iron-flex-layout/iron-flex-layout-classes.html">
 <link rel="import" href="font-awesome.min.css">
-<link href="https://fonts.googleapis.com/css?family=Raleway:400,800,900" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Raleway:400,800,900" rel="stylesheet" type="text/css">
 <!--
 `menu-title-tuintra`
 Logohow shield teams tuintra
